Enhance Customer360 profile fields, UI, exports, and AI summary